--- a/arch/arm64/boot/dts/hisilicon/hip07.dtsi
+++ b/arch/arm64/boot/dts/hisilicon/hip07.dtsi
@@ -1050,6 +1050,23 @@
 		};
 	};
 
+	p0_mbigen_alg_a:interrupt-controller@d0080000 {
+		compatible = "hisilicon,mbigen-v2";
+		reg = <0x0 0xd0080000 0x0 0x10000>;
+
+		mbigen_sec: intc_sec {
+			msi-parent = <&p0_its_dsa_a 0x40400>;
+			interrupt-controller;
+			#interrupt-cells = <2>;
+			num-pins = <33>;
+		};
+		mbigen_smmu_alg: intc_smmu_alg {
+			msi-parent = <&p0_its_dsa_a 0x40b1b>;
+			interrupt-controller;
+			#interrupt-cells = <2>;
+			num-pins = <3>;
+		};
+	};
 	p0_mbigen_dsa_a: interrupt-controller@c0080000 {
 		compatible = "hisilicon,mbigen-v2";
 		reg = <0x0 0xc0080000 0x0 0x10000>;
@@ -1111,7 +1128,20 @@
 		hisilicon,broken-prefetch-cmd;
 		status = "disabled";
 	};
-
+	smmu2: smmu_alg {
+		compatible = "arm,smmu-v3";
+		reg = <0x0 0xd0040000 0x0 0x20000>;
+		/* interrupt-parent = <&mbigen_sec>; */
+		interrupt-parent = <&mbigen_smmu_alg>;
+		interrupts = <733 1>,
+		<734 1>,
+		<735 1>;
+		interrupt-names = "eventq", "gerror", "priq";
+		#iommu-cells = <1>;
+		dma-coherent;
+		hisilicon,broken-prefetch-cmd;
+		/* smmu-cb-memtype = <0x0 0x1>;*/
+	};
 	soc {
 		compatible = "simple-bus";
 		#address-cells = <2>;
@@ -1599,6 +1629,23 @@
 					 0x0 0 0 3 &mbigen_pcie2_a 671 4
 					 0x0 0 0 4 &mbigen_pcie2_a 671 4>;
 			status = "disabled";
+		};
+		sec: sec@d2000000 {
+			compatible = "hisilicon,hip07-sec";
+			#address-cells = <2>;
+			#size-cells = <2>;
+			reg = <0x0 0xd0000000 0x0 0x10000
+				0x0 0xd2000000 0x0 0x10000
+				0x0 0xd2010000 0x0 0x10000>;
+			interrupt-parent = <&mbigen_sec>;
+			iommus = <&smmu2 0x600>;
+			dma-coherent;
+			interrupts = <576 4>,<577 1>,<578 4>,<579 1>,<580 4>,<581 1>,
+					<582 4>,<583 1>,<584 4>,<585 1>,<586 4>,<587 1>,
+					<588 4>,<589 1>,<590 4>,<591 1>,<592 4>,<593 1>,
+					<594 4>,<595 1>,<596 4>,<597 1>,<598 4>,<599 1>,
+					<600 4>,<601 1>,<602 4>,<603 1>,<604 4>,<605 1>,
+					<606 4>,<607 1>,<608 4>;
 		};
 	};
 };
