--- a/drivers/perf/hisilicon/Makefile
+++ b/drivers/perf/hisilicon/Makefile
@@ -1,1 +1,1 @@
-obj-$(CONFIG_HISI_PMU) += hisi_uncore_pmu.o hisi_uncore_l3c_pmu.o hisi_uncore_hha_pmu.o hisi_uncore_ddrc_pmu.o
+obj-$(CONFIG_HISI_PMU) += djtag.o hisi_uncore_pmu_v2.o hisi_uncore_l3c_v2.o hisi_uncore_mn_v2.o hisi_uncore_ddrc_v2.o hisi_uncore_hha_v2.o
